feat: Production/Settlement 도메인, 자정 결산 배치 구현
  - ProductionRecord, Settlement 엔티티 구현
  - Spring Batch: SettlementJobConfig(@StepScope), SettlementJobScheduler(00:05 cron)
  - Production 테스트
  - 세부사항 변경